--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,3 +15,10 @@ build: off  # отключаем встроенную в appveyor систему
 
 test_script:
   - yarn lint && yarn test  # скрипт тестирования
+
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$token:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
