--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
-  "extends": "airbnb-base",
+  "extends": [
+    "airbnb"
+  ],
   "env": {
-     "es6": true,
-     "browser": true,
-     "jest": true
+    "es6": true,
+    "browser": true,
+    "jest": true
   },
   "rules": {
     "no-restricted-syntax": [
