--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-plugin-import": "^2.25.3",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
