--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.16.4",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.2",
