--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.4.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "svg-url-loader": "^7.1.1",
+    "svg-inline-loader": "^0.8.2",
     "terser-webpack-plugin": "^5.2.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.64.4",
