--- a/package.json
+++ b/package.json
@@ -41,9 +41,8 @@
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^2.4.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "svg-inline-loader": "^0.8.2",
+    "raw-loader": "^4.0.2",
     "terser-webpack-plugin": "^5.2.5",
-    "url-loader": "^4.1.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
